docs/public/network-policies/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: open5gs
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
